# G1R-Streaming-Stutter-Fix

./: .gitattributes  .gitignore  00_FINDINGS_AND_TUNING_NOTES.txt  00_README_INSTALLATION.txt  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: linux-app-build.yml  windows-app-build.yml
Presets/04GB_VRAM_1536MB/: Engine.ini  Scalability.ini
Presets/06GB_VRAM_3072MB/: Engine.ini  Scalability.ini
Presets/08GB_VRAM_4096MB/: Engine.ini  Scalability.ini
Presets/10GB_VRAM_5120MB/: Engine.ini  Scalability.ini
Presets/12GB_VRAM_6144MB/: Engine.ini  Scalability.ini
Presets/16GB_VRAM_8192MB/: Engine.ini  Scalability.ini
Presets/20GB_VRAM_10240MB/: Engine.ini  Scalability.ini
Presets/24GB_VRAM_12288MB/: Engine.ini  Scalability.ini
app/: package-lock.json  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/ui/: i18n.js  i18n.test.mjs  index.html  localization-layout.test.mjs  main.js  performance-comparisons.js  performance-comparisons.test.mjs  performance-layout.test.mjs  preferences.js  preferences.test.mjs  scrollbars.test.mjs  streaming-info-panel.test.mjs  styles.css  (+1 more)
docs/: desktop-app.md  nexus-description.md  windows-vm.md
optimizer-core/: Cargo.toml
optimizer-core/src/: hardware.rs  installer.rs  lib.rs  paths.rs  presets.rs  recommendation.rs
optimizer-core/src/installer/: content.rs  ini_merge.rs  manifest.rs  tests.rs
scripts/: patch-linux-appimage.sh  test-windows-vm-scripts.sh  windows-vm-create.sh  windows-vm-run.sh  windows-vm.env.example
(+19 files in other folders)
