[package]
name = "g1r-optimizer-app"
version = "0.1.0"
edition = "2021"
license = "MIT"
build = "build.rs"

[lib]
name = "g1r_optimizer_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "g1r-optimizer"
path = "src/main.rs"

[dependencies]
optimizer-core = { path = "../../optimizer-core" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
